@@ -38,7 +38,7 @@ your language if it is not mentioned here (or to help with one which already
 is -- it is quite helpful to have several translators for one language at
 least for proof reading).
 
-<hr> 
+<hr>
 <center>
 <font size=+2><i><b><a name="available">Available translations</a></b></i></font>
 </center>
@@ -64,9 +64,23 @@ translations as of wxWindows 2.3.
 </tr>
 
 <tr>
-    <td valign=center>Chinese</td>
+    <td valign=center>Catalan</td>
+    <td align=center valign=center><IMG SRC="images/yes.gif" ALT="Done"></td>
+    <td align=center valign=center><A HREF="mailto:paubcrespo@hotmail.com">Pau Bosch i Crespo</A>
+                                   </td>
+</tr>
+
+<tr>
+    <td valign=center>Chinese (simplified)</td>
     <td align=center valign=center><IMG SRC="images/yes.gif" ALT="Done"></td>
     <td align=center valign=center><A HREF="mailto:mrfx@fm365.com">mrfx</A>
+                                   </td>
+</tr>
+
+<tr>
+    <td valign=center>Chinese (traditional)</td>
+    <td align=center valign=center><IMG SRC="images/yes.gif" ALT="Done"></td>
+    <td align=center valign=center><A HREF="mailto:pal.tw@yahoo.com.tw">pal.tw</A>
                                    </td>
 </tr>
 
@@ -157,8 +171,9 @@ translations as of wxWindows 2.3.
 
 <tr>
     <td valign=center>Polish</td>
-    <td align=center valign=center><IMG SRC="images/no.gif" ALT="Not yet"></td>
-    <td align=center valign=center><A HREF="mailto:matiso@hoga.pl">Piotr Mackowiak</A></td>
+    <td align=center valign=center><IMG SRC="images/yes.gif" ALT="Done"></td>
+    <td align=center valign=center><A HREF="mailto:matiso@hoga.pl">Piotr Mackowiak</A>,
+                                   <a href="mailto:jpiw@go2.pl">Janusz Piwowarski</a></td>
 </tr>
 
 <tr>
@@ -201,12 +216,19 @@ translations as of wxWindows 2.3.
     <td align=center valign=center><A HREF="mailto:dogusanh@dynaset.org">Hakki Dogusan</A></td>
 </tr>
 
+<tr>
+    <td valign=center>Ukrainian</td>
+    <td align=center valign=center><IMG SRC="images/yes.gif" ALT="Ok"></td>
+    <td align=center valign=center><A HREF="mailto:manko@salingshot.co.nz">Eugene Manko></td>
+</tr>
+
+
 
 </table>
 
 <br>
 
-<hr> 
+<hr>
 <center>
 <font size=+2><i><b><a name="howtohelp">How to help</a></b></i></font>
 </center>
@@ -259,5 +281,3 @@ any comments/suggestions.
 
 </body>
 </html>
-
-
