@@ -1,3 +1,4 @@
+
 <html>
 <head>
    <title>Platforms supported by wxWindows 2.4</title>
@@ -90,7 +91,7 @@ often don&#39;t work.
 <tr> <td bgcolor="#fafafa"><br></td><td bgcolor="#fafafa" colspan=5> All BSD systems tests are for wxGTK using gcc. </td>
 <tr>
 <td bgcolor="#F0F0F0" align=center valign=center rowspan=1>FreeBSD</td>
-     <td>version from 3.2 to 4.6, x86</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td>VZ</td><td><br></td>
+     <td>all version between 3.2 and 5.0 x86</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td>VZ</td><td><br></td>
 </tr>
 
 <tr>
@@ -107,7 +108,7 @@ often don&#39;t work.
 <td bgcolor="#FFFFFF" align=center valign=center rowspan=5>Solaris</td>
      <td>wxMotif with Sun CC 4.2</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td>VZ</td><td>Thread support must be disabled on system with not MT-safe X11</td>
 <tr> <td>wxMotif with gcc</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td><br></td><td><br></td>
-<tr> <td>wxGTK with Sun CC 4.2</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td>Shiv Shankar Ramakrishnan</td><td><br></td>
+<tr> <td>wxGTK with Sun CC 4.2</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td> </td><td><br></td>
 <tr> <td>wxGTK with gcc</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td><br></td><td><br></td>
 <tr> <td>wxGTK with Sun CC 5.0 and 6.1 (Solaris 7 and 8)</td><td align=center><IMG SRC="images/yes.gif" ALT=Ok></td><td>Jiri Mracek</td><td>You have to edit line 2079 in glib.h to fix GTK+ error</td>
 </tr>
